# m-gsm-symbolic

./: .gitignore  LICENSE  README.md  generated_output.json  makefile  pyproject.toml
.github/ISSUE_TEMPLATE/: feature-template.md
.github/workflows/: tests.yml
data/evaluation_results/: results.csv
data/evaluation_results/gsm_dan/: Llama-3.1-70B.csv  Llama-3.1-8B-Instruct.csv  Llama-3.1-8B.csv  Llama-3.2-1B-Instruct.csv  Llama-3.2-1B.csv  OLMo-1B-hf.csv  Pleias-1.2b-Preview.csv  gemma-3-1b-it.csv  gemma-3-1b-pt.csv  openai__gpt-4.1-nano-2025-04-14.csv
data/evaluation_results/gsm_eng/: Llama-3.1-70B.csv  Llama-3.1-8B-Instruct.csv  Llama-3.1-8B.csv  Llama-3.2-1B-Instruct.csv  Llama-3.2-1B.csv  OLMo-1B-hf.csv  Pleias-1.2b-Preview.csv  gemma-3-1b-it.csv  gemma-3-1b-pt.csv
data/evaluation_results/kaenguruen/: Llama-3.2-1B-Instruct.csv  Llama-3.2-1B.csv  OLMo-1B-hf.csv  Pleias-1.2b-Preview.csv  gemma-3-1b-it.csv  gemma-3-1b-pt.csv  openai__gpt-4.1-nano-2025-04-14.csv  openai__gpt-4.1-nano-2025-04-14.json  openai__gpt-4.1-nano-2025-04-14_incl_options.csv
data/kaenguruen/2020_6-7-klasse/: 13.txt  19.txt  21.txt  22.txt  23.txt  3.txt  4.txt  6.txt  7.txt  9.txt
data/kaenguruen/2020_8-9-klasse/: 11.txt  13.txt  14.txt  16.txt  17.txt  19.txt  2.txt  21.txt  24.txt  3.txt  4.txt  6.txt  7.txt
data/kaenguruen/2021_6-7-klasse/: 11.txt  12.txt  15.txt  16.txt  17.txt  18.txt  2.txt  21.txt  22.txt  24.txt
data/kaenguruen/2021_8-9-klasse/: 10.txt  14.txt  15.txt  19.txt  2.txt  20.txt  22.txt  24.txt  5.txt  7.txt  8.txt
data/kaenguruen/2022_6-7_klasse/: 15.txt  17.txt  18.txt  (+5 more)
data/kaenguruen_json/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  (+66 more)
logs/: 2026-04-15T09-51-06-00-00_kaenguruen_d4wBLz3A7oMdhCiY8xNh2f.eval
notebooks/: acc_viz.ipynb  test_generation.ipynb
src/: initial_translation.py  test.ipynb
src/kaenguruen/: load_data.py
src/m_gsm_symbolic/: __init__.py  evaluation.py  generate_samples.py  gsm_parser.py  gsm_variation_parser.py  load_data.py  parser.py  replacements_list.py  replacements_list_da.py  replacements_list_en.py  sofie_test_parser.py
src/scripts/: dan_gsm_variation_parser.py  evaluation_1B.py  evaluation_outline.py  evaluation_outline_gsm.py  evaluation_outline_incl_options.py  generate_gsm_questions.py  gsm_variation.py  initial_translation.py  post_training.py  upload_kaenguruen_to_hf.py
src/tests/: gsm_variation_parser.py  test_generate_samples.py  test_gsm_parser.py  test_gsm_variation_parser.py  test_load_kaenguruen.py  test_parser.py  test_sofie_test_parser.py
(+4784 files in other folders)
