[project]
name = "m-gsm-symbolic"
version = "0.1.0"
description = "A codebase for examining the cross-lingual transfer of reasoning."
readme = "README.md"
authors = [
    { name = "Kenneth Enevoldsen", email = "kennethcenevoldsen@gmail.com" },
]

requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "dotenv>=0.9.9",
    "huggingface>=0.0.1",
    "huggingface-hub[cli]>=0.34.3",
    "datasets>=4.0.0",
    "accelerate>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.7",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "jupyter>=1.1.1",
    "notebook>=7.4.3",


]

[tool.uv.sources]
pydantic-ai = { git = "https://github.com/pydantic/pydantic-ai.git" } # TODO: Currenly required for https://github.com/pydantic/pydantic-ai/pulls?q=is%3Apr+include_expected_output+is%3Aclosed
